fixed more error with the module not showing up

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,5 +1,5 @@
 
-#match-modal {
+/*#match-modal {
   position: fixed;
   top: 0;
   background-color: rgba(0, 0, 0, 0.4);
@@ -16,7 +16,7 @@
   padding: 20px;
   border: 1px solid #888;
   max-width: 700px;
-}
+}*/
 .modal img {
   width: 100%;
   margin: 0 auto;
